# python-project-lvl4

./: .env  Makefile  Procfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: coverage.yml  linter.yml  tests.yml
fixtures/: labels.json  statuses.json  tasks.json  users.json
labels/: forms.py  models.py  urls.py  views.py
labels/migrations/: 0001_initial.py  0002_alter_labels_label_name.py  0002_rename_label_date_labels_date_and_more.py
main/: models.py  urls.py  views.py
main/migrations/: 0001_initial.py
statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py  0002_rename_status_date_status_date_and_more.py
task_manager/: context_processor.py  mixins.py  settings.py  urls.py  views.py  wsgi.py
task_manager/task_manager/: settings.py
tasks/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_tasks_assigned_user_alter_tasks_created_user_and_more.py  0002_initial.py  0002_remove_tasks_label_tasks_label.py  0003_alter_tasks_author_alter_tasks_executor_and_more.py  0003_remove_tasks_created_user.py  0004_alter_tasks_labels.py  0004_tasks_created_user.py  0005_alter_tasks_created_user.py  0006_remove_tasks_created_user_tasks_created_user.py  0007_alter_tasks_created_user.py  (+3 more)
templates/: add_label.html  add_task.html  base.html  create.html  home.html  labels.html  statuses.html  tasks.html  update.html  user.html  user_delete.html  users.html
users/: forms.py  models.py  tests.py  urls.py  views.py
(+58 files in other folders)
