[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Nidenai"]
packages = [
  { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.4"
python-dotenv = "^0.20.0"
asgiref = "^3.5.2"
rollbar = "^0.16.3"
django-filter = "^22.1"
bootstrap4 = "^0.1.0"
whitenoise = "^6.2.0"
psycopg2-binary = "^2.9.3"
django-bootstrap4 = "^22.1"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
